Add EBS CSI Driver

--- a/IaC/variables.tf.template
+++ b/IaC/variables.tf.template
@@ -9,3 +9,7 @@ variable "awscli_profile" {
 variable "prefix" {
   default = "change me!"
 }
+
+variable "enable_ebs_csi_driver" {
+  default = false
+}
