--- a/IaC/variables.tf.template
+++ b/IaC/variables.tf.template
@@ -17,3 +17,7 @@ variable "enable_ebs_csi_driver" {
 variable "enable_efs_csi_driver" {
   default = false
 }
+
+variable "enable_prometheus" {
+  default = false
+}
