--- a/Monitoring/server.yaml
+++ b/Monitoring/server.yaml
@@ -1,7 +1,12 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: monitoring-prom
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  namespace: kube-system
+  namespace: monitoring-prom
   name: deployment-fastapi
 spec:
   selector:
@@ -19,19 +24,20 @@ spec:
         imagePullPolicy: Always
         name: app-fastapi
         ports:
-        - containerPort: 8000
+        - name: fastapi
+          containerPort: 8000
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: kube-system
+  namespace: monitoring-prom
   name: service-fastapi
+  labels:
+    app.kubernetes.io/name: app-fastapi
 spec:
   ports:
     - name: fastapi
       port: 8000
-      targetPort: 8000
-      protocol: TCP
   type: NodePort
   selector:
     app.kubernetes.io/name: app-fastapi
@@ -39,7 +45,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  namespace: kube-system
+  namespace: monitoring-prom
   name: ingress-fastapi
 spec:
   ingressClassName: nginx
